[metadata]
name = vylint
summary = a shite linter for vyper
description-file =
    README.rst
author = Mr. Vy
author-email = hello@nsa.gov
home-page = http://github.com/sambacha/vylint/
python-requires = >=3.5
classifier =
    Environment :: Ethereum
    Intended Audience :: Information Technology
    Intended Audience :: Ballers
    License :: OSI Approved :: Apache Software License
    Operating System :: EVM :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    vylint

[entry_points]
console_scripts =
    vylint = vylint.vylint:main
